cil-1.7.3/src/smt/smtlib_parse.output
   0  $accept : %entry% $end

   1  main : commands
   2       | EOF

   3  cur_position :

   4  an_option : attribute

   5  attribute : cur_position KEYWORD
   6            | cur_position KEYWORD attributevalue

   7  attributevalue : specconstant
   8                 | symbol
   9                 | cur_position LPAREN attributevalsexpr_attributevalue_sexpr5 RPAREN

  10  command : cur_position LPAREN SETLOGIC symbol RPAREN
  11          | cur_position LPAREN SETOPTION an_option RPAREN
  12          | cur_position LPAREN SETINFO attribute RPAREN
  13          | cur_position LPAREN DECLARESORT symbol NUMERAL RPAREN
  14          | cur_position LPAREN DEFINESORT symbol LPAREN commanddefinesort_command_symbol11 RPAREN sort RPAREN
  15          | cur_position LPAREN DECLAREFUN symbol LPAREN commanddeclarefun_command_sort13 RPAREN sort RPAREN
  16          | cur_position LPAREN DEFINEFUN symbol LPAREN commanddefinefun_command_sortedvar15 RPAREN sort term RPAREN
  17          | cur_position LPAREN PUSH NUMERAL RPAREN
  18          | cur_position LPAREN POP NUMERAL RPAREN
  19          | cur_position LPAREN ASSERT term RPAREN
  20          | cur_position LPAREN CHECKSAT RPAREN
  21          | cur_position LPAREN GETASSERT RPAREN
  22          | cur_position LPAREN GETPROOF RPAREN
  23          | cur_position LPAREN GETUNSATCORE RPAREN
  24          | cur_position LPAREN GETVALUE LPAREN commandgetvalue_command_term24 RPAREN RPAREN
  25          | cur_position LPAREN GETASSIGN RPAREN
  26          | cur_position LPAREN GETOPTION KEYWORD RPAREN
  27          | cur_position LPAREN GETINFO infoflag RPAREN
  28          | cur_position LPAREN EXIT RPAREN

  29  commands : commands_commands_command30

  30  identifier : symbol
  31             | cur_position LPAREN UNDERSCORE symbol idunderscoresymnum_identifier_numeral33 RPAREN

  32  infoflag : cur_position KEYWORD

  33  qualidentifier : identifier
  34                 | cur_position LPAREN AS identifier sort RPAREN

  35  sexpr : specconstant
  36        | symbol
  37        | cur_position KEYWORD
  38        | cur_position LPAREN sexprinparen_sexpr_sexpr41 RPAREN

  39  sort : identifier
  40       | cur_position LPAREN identifier sortidsortmulti_sort_sort44 RPAREN

  41  sortedvar : cur_position LPAREN symbol sort RPAREN

  42  specconstant : cur_position DECIMAL
  43               | cur_position NUMERAL
  44               | cur_position STRINGLIT
  45               | cur_position HEXADECIMAL
  46               | cur_position BINARY

  47  symbol : cur_position SYMBOL
  48         | cur_position ASCIIWOR

  49  term : specconstant
  50       | qualidentifier
  51       | cur_position LPAREN qualidentifier termqualidterm_term_term56 RPAREN
  52       | cur_position LPAREN LET LPAREN termletterm_term_varbinding58 RPAREN term RPAREN
  53       | cur_position LPAREN FORALL LPAREN termforallterm_term_sortedvar60 RPAREN term RPAREN
  54       | cur_position LPAREN EXISTS LPAREN termexiststerm_term_sortedvar62 RPAREN term RPAREN
  55       | cur_position LPAREN EXCLIMATIONPT term termexclimationpt_term_attribute64 RPAREN

  56  varbinding : cur_position LPAREN symbol term RPAREN

  57  termexclimationpt_term_attribute64 : attribute
  58                                     | attribute termexclimationpt_term_attribute64

  59  termexiststerm_term_sortedvar62 : sortedvar
  60                                  | sortedvar termexiststerm_term_sortedvar62

  61  termforallterm_term_sortedvar60 : sortedvar
  62                                  | sortedvar termforallterm_term_sortedvar60

  63  termletterm_term_varbinding58 : varbinding
  64                                | varbinding termletterm_term_varbinding58

  65  termqualidterm_term_term56 : term
  66                             | term termqualidterm_term_term56

  67  sortidsortmulti_sort_sort44 : sort
  68                              | sort sortidsortmulti_sort_sort44

  69  sexprinparen_sexpr_sexpr41 : cur_position
  70                             | sexpr sexprinparen_sexpr_sexpr41

  71  idunderscoresymnum_identifier_numeral33 : cur_position NUMERAL
  72                                          | cur_position NUMERAL idunderscoresymnum_identifier_numeral33

  73  commands_commands_command30 : cur_position
  74                              | command commands_commands_command30

  75  commandgetvalue_command_term24 : term
  76                                 | term commandgetvalue_command_term24

  77  commanddefinefun_command_sortedvar15 : cur_position
  78                                       | sortedvar commanddefinefun_command_sortedvar15

  79  commanddeclarefun_command_sort13 : cur_position
  80                                   | sort commanddeclarefun_command_sort13

  81  commanddefinesort_command_symbol11 : cur_position
  82                                     | symbol commanddefinesort_command_symbol11

  83  attributevalsexpr_attributevalue_sexpr5 : cur_position
  84                                          | sexpr attributevalsexpr_attributevalue_sexpr5

  85  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (85)
	cur_position : .  (3)

	EOF  shift 3
	$end  reduce 3
	LPAREN  reduce 3

	main  goto 4
	command  goto 5
	commands  goto 6
	commands_commands_command30  goto 7
	cur_position  goto 8


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	main : EOF .  (2)

	.  reduce 2


state 4
	%entry% : '\001' main .  (85)

	.  reduce 85


state 5
	commands_commands_command30 : command . commands_commands_command30  (74)
	cur_position : .  (3)

	.  reduce 3

	command  goto 5
	commands_commands_command30  goto 9
	cur_position  goto 8


state 6
	main : commands .  (1)

	.  reduce 1


state 7
	commands : commands_commands_command30 .  (29)

	.  reduce 29


state 8
	command : cur_position . LPAREN SETLOGIC symbol RPAREN  (10)
	command : cur_position . LPAREN SETOPTION an_option RPAREN  (11)
	command : cur_position . LPAREN SETINFO attribute RPAREN  (12)
	command : cur_position . LPAREN DECLARESORT symbol NUMERAL RPAREN  (13)
	command : cur_position . LPAREN DEFINESORT symbol LPAREN commanddefinesort_command_symbol11 RPAREN sort RPAREN  (14)
	command : cur_position . LPAREN DECLAREFUN symbol LPAREN commanddeclarefun_command_sort13 RPAREN sort RPAREN  (15)
	command : cur_position . LPAREN DEFINEFUN symbol LPAREN commanddefinefun_command_sortedvar15 RPAREN sort term RPAREN  (16)
	command : cur_position . LPAREN PUSH NUMERAL RPAREN  (17)
	command : cur_position . LPAREN POP NUMERAL RPAREN  (18)
	command : cur_position . LPAREN ASSERT term RPAREN  (19)
	command : cur_position . LPAREN CHECKSAT RPAREN  (20)
	command : cur_position . LPAREN GETASSERT RPAREN  (21)
	command : cur_position . LPAREN GETPROOF RPAREN  (22)
	command : cur_position . LPAREN GETUNSATCORE RPAREN  (23)
	command : cur_position . LPAREN GETVALUE LPAREN commandgetvalue_command_term24 RPAREN RPAREN  (24)
	command : cur_position . LPAREN GETASSIGN RPAREN  (25)
	command : cur_position . LPAREN GETOPTION KEYWORD RPAREN  (26)
	command : cur_position . LPAREN GETINFO infoflag RPAREN  (27)
	command : cur_position . LPAREN EXIT RPAREN  (28)
	commands_commands_command30 : cur_position .  (73)

	LPAREN  shift 10
	$end  reduce 73


state 9
	commands_commands_command30 : command commands_commands_command30 .  (74)

	.  reduce 74


state 10
	command : cur_position LPAREN . SETLOGIC symbol RPAREN  (10)
	command : cur_position LPAREN . SETOPTION an_option RPAREN  (11)
	command : cur_position LPAREN . SETINFO attribute RPAREN  (12)
	command : cur_position LPAREN . DECLARESORT symbol NUMERAL RPAREN  (13)
	command : cur_position LPAREN . DEFINESORT symbol LPAREN commanddefinesort_command_symbol11 RPAREN sort RPAREN  (14)
	command : cur_position LPAREN . DECLAREFUN symbol LPAREN commanddeclarefun_command_sort13 RPAREN sort RPAREN  (15)
	command : cur_position LPAREN . DEFINEFUN symbol LPAREN commanddefinefun_command_sortedvar15 RPAREN sort term RPAREN  (16)
	command : cur_position LPAREN . PUSH NUMERAL RPAREN  (17)
	command : cur_position LPAREN . POP NUMERAL RPAREN  (18)
	command : cur_position LPAREN . ASSERT term RPAREN  (19)
	command : cur_position LPAREN . CHECKSAT RPAREN  (20)
	command : cur_position LPAREN . GETASSERT RPAREN  (21)
	command : cur_position LPAREN . GETPROOF RPAREN  (22)
	command : cur_position LPAREN . GETUNSATCORE RPAREN  (23)
	command : cur_position LPAREN . GETVALUE LPAREN commandgetvalue_command_term24 RPAREN RPAREN  (24)
	command : cur_position LPAREN . GETASSIGN RPAREN  (25)
	command : cur_position LPAREN . GETOPTION KEYWORD RPAREN  (26)
	command : cur_position LPAREN . GETINFO infoflag RPAREN  (27)
	command : cur_position LPAREN . EXIT RPAREN  (28)

	ASSERT  shift 11
	CHECKSAT  shift 12
	DECLAREFUN  shift 13
	DECLARESORT  shift 14
	DEFINEFUN  shift 15
	DEFINESORT  shift 16
	EXIT  shift 17
	GETASSERT  shift 18
	GETASSIGN  shift 19
	GETINFO  shift 20
	GETOPTION  shift 21
	GETPROOF  shift 22
	GETUNSATCORE  shift 23
	GETVALUE  shift 24
	POP  shift 25
	PUSH  shift 26
	SETINFO  shift 27
	SETLOGIC  shift 28
	SETOPTION  shift 29
	.  error


state 11
	command : cur_position LPAREN ASSERT . term RPAREN  (19)
	cur_position : .  (3)

	.  reduce 3

	identifier  goto 30
	qualidentifier  goto 31
	specconstant  goto 32
	symbol  goto 33
	term  goto 34
	cur_position  goto 35


state 12
	command : cur_position LPAREN CHECKSAT . RPAREN  (20)

	RPAREN  shift 36
	.  error


state 13
	command : cur_position LPAREN DECLAREFUN . symbol LPAREN commanddeclarefun_command_sort13 RPAREN sort RPAREN  (15)
	cur_position : .  (3)

	.  reduce 3

	symbol  goto 37
	cur_position  goto 38


state 14
	command : cur_position LPAREN DECLARESORT . symbol NUMERAL RPAREN  (13)
	cur_position : .  (3)

	.  reduce 3

	symbol  goto 39
	cur_position  goto 38


state 15
	command : cur_position LPAREN DEFINEFUN . symbol LPAREN commanddefinefun_command_sortedvar15 RPAREN sort term RPAREN  (16)
	cur_position : .  (3)

	.  reduce 3

	symbol  goto 40
	cur_position  goto 38


state 16
	command : cur_position LPAREN DEFINESORT . symbol LPAREN commanddefinesort_command_symbol11 RPAREN sort RPAREN  (14)
	cur_position : .  (3)

	.  reduce 3

	symbol  goto 41
	cur_position  goto 38


state 17
	command : cur_position LPAREN EXIT . RPAREN  (28)

	RPAREN  shift 42
	.  error


state 18
	command : cur_position LPAREN GETASSERT . RPAREN  (21)

	RPAREN  shift 43
	.  error


state 19
	command : cur_position LPAREN GETASSIGN . RPAREN  (25)

	RPAREN  shift 44
	.  error


state 20
	command : cur_position LPAREN GETINFO . infoflag RPAREN  (27)
	cur_position : .  (3)

	.  reduce 3

	infoflag  goto 45
	cur_position  goto 46


state 21
	command : cur_position LPAREN GETOPTION . KEYWORD RPAREN  (26)

	KEYWORD  shift 47
	.  error


state 22
	command : cur_position LPAREN GETPROOF . RPAREN  (22)

	RPAREN  shift 48
	.  error


state 23
	command : cur_position LPAREN GETUNSATCORE . RPAREN  (23)

	RPAREN  shift 49
	.  error


state 24
	command : cur_position LPAREN GETVALUE . LPAREN commandgetvalue_command_term24 RPAREN RPAREN  (24)

	LPAREN  shift 50
	.  error


state 25
	command : cur_position LPAREN POP . NUMERAL RPAREN  (18)

	NUMERAL  shift 51
	.  error


state 26
	command : cur_position LPAREN PUSH . NUMERAL RPAREN  (17)

	NUMERAL  shift 52
	.  error


state 27
	command : cur_position LPAREN SETINFO . attribute RPAREN  (12)
	cur_position : .  (3)

	.  reduce 3

	attribute  goto 53
	cur_position  goto 54


state 28
	command : cur_position LPAREN SETLOGIC . symbol RPAREN  (10)
	cur_position : .  (3)

	.  reduce 3

	symbol  goto 55
	cur_position  goto 38


state 29
	command : cur_position LPAREN SETOPTION . an_option RPAREN  (11)
	cur_position : .  (3)

	.  reduce 3

	an_option  goto 56
	attribute  goto 57
	cur_position  goto 54


state 30
	qualidentifier : identifier .  (33)

	.  reduce 33


state 31
	term : qualidentifier .  (50)

	.  reduce 50


state 32
	term : specconstant .  (49)

	.  reduce 49


state 33
	identifier : symbol .  (30)

	.  reduce 30


state 34
	command : cur_position LPAREN ASSERT term . RPAREN  (19)

	RPAREN  shift 58
	.  error


state 35
	identifier : cur_position . LPAREN UNDERSCORE symbol idunderscoresymnum_identifier_numeral33 RPAREN  (31)
	qualidentifier : cur_position . LPAREN AS identifier sort RPAREN  (34)
	specconstant : cur_position . DECIMAL  (42)
	specconstant : cur_position . NUMERAL  (43)
	specconstant : cur_position . STRINGLIT  (44)
	specconstant : cur_position . HEXADECIMAL  (45)
	specconstant : cur_position . BINARY  (46)
	symbol : cur_position . SYMBOL  (47)
	symbol : cur_position . ASCIIWOR  (48)
	term : cur_position . LPAREN qualidentifier termqualidterm_term_term56 RPAREN  (51)
	term : cur_position . LPAREN LET LPAREN termletterm_term_varbinding58 RPAREN term RPAREN  (52)
	term : cur_position . LPAREN FORALL LPAREN termforallterm_term_sortedvar60 RPAREN term RPAREN  (53)
	term : cur_position . LPAREN EXISTS LPAREN termexiststerm_term_sortedvar62 RPAREN term RPAREN  (54)
	term : cur_position . LPAREN EXCLIMATIONPT term termexclimationpt_term_attribute64 RPAREN  (55)

	LPAREN  shift 59
	ASCIIWOR  shift 60
	BINARY  shift 61
	DECIMAL  shift 62
	HEXADECIMAL  shift 63
	NUMERAL  shift 64
	STRINGLIT  shift 65
	SYMBOL  shift 66
	.  error


state 36
	command : cur_position LPAREN CHECKSAT RPAREN .  (20)

	.  reduce 20


state 37
	command : cur_position LPAREN DECLAREFUN symbol . LPAREN commanddeclarefun_command_sort13 RPAREN sort RPAREN  (15)

	LPAREN  shift 67
	.  error


state 38
	symbol : cur_position . SYMBOL  (47)
	symbol : cur_position . ASCIIWOR  (48)

	ASCIIWOR  shift 60
	SYMBOL  shift 66
	.  error


state 39
	command : cur_position LPAREN DECLARESORT symbol . NUMERAL RPAREN  (13)

	NUMERAL  shift 68
	.  error


state 40
	command : cur_position LPAREN DEFINEFUN symbol . LPAREN commanddefinefun_command_sortedvar15 RPAREN sort term RPAREN  (16)

	LPAREN  shift 69
	.  error


state 41
	command : cur_position LPAREN DEFINESORT symbol . LPAREN commanddefinesort_command_symbol11 RPAREN sort RPAREN  (14)

	LPAREN  shift 70
	.  error


state 42
	command : cur_position LPAREN EXIT RPAREN .  (28)

	.  reduce 28


state 43
	command : cur_position LPAREN GETASSERT RPAREN .  (21)

	.  reduce 21


state 44
	command : cur_position LPAREN GETASSIGN RPAREN .  (25)

	.  reduce 25


state 45
	command : cur_position LPAREN GETINFO infoflag . RPAREN  (27)

	RPAREN  shift 71
	.  error


state 46
	infoflag : cur_position . KEYWORD  (32)

	KEYWORD  shift 72
	.  error


state 47
	command : cur_position LPAREN GETOPTION KEYWORD . RPAREN  (26)

	RPAREN  shift 73
	.  error


state 48
	command : cur_position LPAREN GETPROOF RPAREN .  (22)

	.  reduce 22


state 49
	command : cur_position LPAREN GETUNSATCORE RPAREN .  (23)

	.  reduce 23


state 50
	command : cur_position LPAREN GETVALUE LPAREN . commandgetvalue_command_term24 RPAREN RPAREN  (24)
	cur_position : .  (3)

	.  reduce 3

	commandgetvalue_command_term24  goto 74
	identifier  goto 30
	qualidentifier  goto 31
	specconstant  goto 32
	symbol  goto 33
	term  goto 75
	cur_position  goto 35


state 51
	command : cur_position LPAREN POP NUMERAL . RPAREN  (18)

	RPAREN  shift 76
	.  error


state 52
	command : cur_position LPAREN PUSH NUMERAL . RPAREN  (17)

	RPAREN  shift 77
	.  error


state 53
	command : cur_position LPAREN SETINFO attribute . RPAREN  (12)

	RPAREN  shift 78
	.  error


state 54
	attribute : cur_position . KEYWORD  (5)
	attribute : cur_position . KEYWORD attributevalue  (6)

	KEYWORD  shift 79
	.  error


state 55
	command : cur_position LPAREN SETLOGIC symbol . RPAREN  (10)

	RPAREN  shift 80
	.  error


state 56
	command : cur_position LPAREN SETOPTION an_option . RPAREN  (11)

	RPAREN  shift 81
	.  error


state 57
	an_option : attribute .  (4)

	.  reduce 4


state 58
	command : cur_position LPAREN ASSERT term RPAREN .  (19)

	.  reduce 19


state 59
	identifier : cur_position LPAREN . UNDERSCORE symbol idunderscoresymnum_identifier_numeral33 RPAREN  (31)
	qualidentifier : cur_position LPAREN . AS identifier sort RPAREN  (34)
	term : cur_position LPAREN . qualidentifier termqualidterm_term_term56 RPAREN  (51)
	term : cur_position LPAREN . LET LPAREN termletterm_term_varbinding58 RPAREN term RPAREN  (52)
	term : cur_position LPAREN . FORALL LPAREN termforallterm_term_sortedvar60 RPAREN term RPAREN  (53)
	term : cur_position LPAREN . EXISTS LPAREN termexiststerm_term_sortedvar62 RPAREN term RPAREN  (54)
	term : cur_position LPAREN . EXCLIMATIONPT term termexclimationpt_term_attribute64 RPAREN  (55)
	cur_position : .  (3)

	AS  shift 82
	EXCLIMATIONPT  shift 83
	EXISTS  shift 84
	FORALL  shift 85
	LET  shift 86
	UNDERSCORE  shift 87
	LPAREN  reduce 3
	ASCIIWOR  reduce 3
	SYMBOL  reduce 3

	identifier  goto 30
	qualidentifier  goto 88
	symbol  goto 33
	cur_position  goto 89


state 60
	symbol : cur_position ASCIIWOR .  (48)

	.  reduce 48


state 61
	specconstant : cur_position BINARY .  (46)

	.  reduce 46


state 62
	specconstant : cur_position DECIMAL .  (42)

	.  reduce 42


state 63
	specconstant : cur_position HEXADECIMAL .  (45)

	.  reduce 45


state 64
	specconstant : cur_position NUMERAL .  (43)

	.  reduce 43


state 65
	specconstant : cur_position STRINGLIT .  (44)

	.  reduce 44


state 66
	symbol : cur_position SYMBOL .  (47)

	.  reduce 47


state 67
	command : cur_position LPAREN DECLAREFUN symbol LPAREN . commanddeclarefun_command_sort13 RPAREN sort RPAREN  (15)
	cur_position : .  (3)

	.  reduce 3

	commanddeclarefun_command_sort13  goto 90
	identifier  goto 91
	sort  goto 92
	symbol  goto 33
	cur_position  goto 93


state 68
	command : cur_position LPAREN DECLARESORT symbol NUMERAL . RPAREN  (13)

	RPAREN  shift 94
	.  error


state 69
	command : cur_position LPAREN DEFINEFUN symbol LPAREN . commanddefinefun_command_sortedvar15 RPAREN sort term RPAREN  (16)
	cur_position : .  (3)

	.  reduce 3

	commanddefinefun_command_sortedvar15  goto 95
	sortedvar  goto 96
	cur_position  goto 97


state 70
	command : cur_position LPAREN DEFINESORT symbol LPAREN . commanddefinesort_command_symbol11 RPAREN sort RPAREN  (14)
	cur_position : .  (3)

	.  reduce 3

	commanddefinesort_command_symbol11  goto 98
	symbol  goto 99
	cur_position  goto 100


state 71
	command : cur_position LPAREN GETINFO infoflag RPAREN .  (27)

	.  reduce 27


state 72
	infoflag : cur_position KEYWORD .  (32)

	.  reduce 32


state 73
	command : cur_position LPAREN GETOPTION KEYWORD RPAREN .  (26)

	.  reduce 26


state 74
	command : cur_position LPAREN GETVALUE LPAREN commandgetvalue_command_term24 . RPAREN RPAREN  (24)

	RPAREN  shift 101
	.  error


state 75
	commandgetvalue_command_term24 : term .  (75)
	commandgetvalue_command_term24 : term . commandgetvalue_command_term24  (76)
	cur_position : .  (3)

	LPAREN  reduce 3
	RPAREN  reduce 75
	ASCIIWOR  reduce 3
	BINARY  reduce 3
	DECIMAL  reduce 3
	HEXADECIMAL  reduce 3
	NUMERAL  reduce 3
	STRINGLIT  reduce 3
	SYMBOL  reduce 3

	commandgetvalue_command_term24  goto 102
	identifier  goto 30
	qualidentifier  goto 31
	specconstant  goto 32
	symbol  goto 33
	term  goto 75
	cur_position  goto 35


state 76
	command : cur_position LPAREN POP NUMERAL RPAREN .  (18)

	.  reduce 18


state 77
	command : cur_position LPAREN PUSH NUMERAL RPAREN .  (17)

	.  reduce 17


state 78
	command : cur_position LPAREN SETINFO attribute RPAREN .  (12)

	.  reduce 12


state 79
	attribute : cur_position KEYWORD .  (5)
	attribute : cur_position KEYWORD . attributevalue  (6)
	cur_position : .  (3)

	LPAREN  reduce 3
	RPAREN  reduce 5
	ASCIIWOR  reduce 3
	BINARY  reduce 3
	DECIMAL  reduce 3
	HEXADECIMAL  reduce 3
	KEYWORD  reduce 5
	NUMERAL  reduce 3
	STRINGLIT  reduce 3
	SYMBOL  reduce 3

	attributevalue  goto 103
	specconstant  goto 104
	symbol  goto 105
	cur_position  goto 106


state 80
	command : cur_position LPAREN SETLOGIC symbol RPAREN .  (10)

	.  reduce 10


state 81
	command : cur_position LPAREN SETOPTION an_option RPAREN .  (11)

	.  reduce 11


state 82
	qualidentifier : cur_position LPAREN AS . identifier sort RPAREN  (34)
	cur_position : .  (3)

	.  reduce 3

	identifier  goto 107
	symbol  goto 33
	cur_position  goto 108


state 83
	term : cur_position LPAREN EXCLIMATIONPT . term termexclimationpt_term_attribute64 RPAREN  (55)
	cur_position : .  (3)

	.  reduce 3

	identifier  goto 30
	qualidentifier  goto 31
	specconstant  goto 32
	symbol  goto 33
	term  goto 109
	cur_position  goto 35


state 84
	term : cur_position LPAREN EXISTS . LPAREN termexiststerm_term_sortedvar62 RPAREN term RPAREN  (54)

	LPAREN  shift 110
	.  error


state 85
	term : cur_position LPAREN FORALL . LPAREN termforallterm_term_sortedvar60 RPAREN term RPAREN  (53)

	LPAREN  shift 111
	.  error


state 86
	term : cur_position LPAREN LET . LPAREN termletterm_term_varbinding58 RPAREN term RPAREN  (52)

	LPAREN  shift 112
	.  error


state 87
	identifier : cur_position LPAREN UNDERSCORE . symbol idunderscoresymnum_identifier_numeral33 RPAREN  (31)
	cur_position : .  (3)

	.  reduce 3

	symbol  goto 113
	cur_position  goto 38


state 88
	term : cur_position LPAREN qualidentifier . termqualidterm_term_term56 RPAREN  (51)
	cur_position : .  (3)

	.  reduce 3

	identifier  goto 30
	qualidentifier  goto 31
	specconstant  goto 32
	symbol  goto 33
	term  goto 114
	termqualidterm_term_term56  goto 115
	cur_position  goto 35


state 89
	identifier : cur_position . LPAREN UNDERSCORE symbol idunderscoresymnum_identifier_numeral33 RPAREN  (31)
	qualidentifier : cur_position . LPAREN AS identifier sort RPAREN  (34)
	symbol : cur_position . SYMBOL  (47)
	symbol : cur_position . ASCIIWOR  (48)

	LPAREN  shift 116
	ASCIIWOR  shift 60
	SYMBOL  shift 66
	.  error


state 90
	command : cur_position LPAREN DECLAREFUN symbol LPAREN commanddeclarefun_command_sort13 . RPAREN sort RPAREN  (15)

	RPAREN  shift 117
	.  error


state 91
	sort : identifier .  (39)

	.  reduce 39


state 92
	commanddeclarefun_command_sort13 : sort . commanddeclarefun_command_sort13  (80)
	cur_position : .  (3)

	.  reduce 3

	commanddeclarefun_command_sort13  goto 118
	identifier  goto 91
	sort  goto 92
	symbol  goto 33
	cur_position  goto 93


state 93
	identifier : cur_position . LPAREN UNDERSCORE symbol idunderscoresymnum_identifier_numeral33 RPAREN  (31)
	sort : cur_position . LPAREN identifier sortidsortmulti_sort_sort44 RPAREN  (40)
	symbol : cur_position . SYMBOL  (47)
	symbol : cur_position . ASCIIWOR  (48)
	commanddeclarefun_command_sort13 : cur_position .  (79)

	LPAREN  shift 119
	ASCIIWOR  shift 60
	SYMBOL  shift 66
	RPAREN  reduce 79


state 94
	command : cur_position LPAREN DECLARESORT symbol NUMERAL RPAREN .  (13)

	.  reduce 13


state 95
	command : cur_position LPAREN DEFINEFUN symbol LPAREN commanddefinefun_command_sortedvar15 . RPAREN sort term RPAREN  (16)

	RPAREN  shift 120
	.  error


state 96
	commanddefinefun_command_sortedvar15 : sortedvar . commanddefinefun_command_sortedvar15  (78)
	cur_position : .  (3)

	.  reduce 3

	commanddefinefun_command_sortedvar15  goto 121
	sortedvar  goto 96
	cur_position  goto 97


state 97
	sortedvar : cur_position . LPAREN symbol sort RPAREN  (41)
	commanddefinefun_command_sortedvar15 : cur_position .  (77)

	LPAREN  shift 122
	RPAREN  reduce 77


state 98
	command : cur_position LPAREN DEFINESORT symbol LPAREN commanddefinesort_command_symbol11 . RPAREN sort RPAREN  (14)

	RPAREN  shift 123
	.  error


state 99
	commanddefinesort_command_symbol11 : symbol . commanddefinesort_command_symbol11  (82)
	cur_position : .  (3)

	.  reduce 3

	commanddefinesort_command_symbol11  goto 124
	symbol  goto 99
	cur_position  goto 100


state 100
	symbol : cur_position . SYMBOL  (47)
	symbol : cur_position . ASCIIWOR  (48)
	commanddefinesort_command_symbol11 : cur_position .  (81)

	ASCIIWOR  shift 60
	SYMBOL  shift 66
	RPAREN  reduce 81


state 101
	command : cur_position LPAREN GETVALUE LPAREN commandgetvalue_command_term24 RPAREN . RPAREN  (24)

	RPAREN  shift 125
	.  error


state 102
	commandgetvalue_command_term24 : term commandgetvalue_command_term24 .  (76)

	.  reduce 76


state 103
	attribute : cur_position KEYWORD attributevalue .  (6)

	.  reduce 6


state 104
	attributevalue : specconstant .  (7)

	.  reduce 7


state 105
	attributevalue : symbol .  (8)

	.  reduce 8


state 106
	attributevalue : cur_position . LPAREN attributevalsexpr_attributevalue_sexpr5 RPAREN  (9)
	specconstant : cur_position . DECIMAL  (42)
	specconstant : cur_position . NUMERAL  (43)
	specconstant : cur_position . STRINGLIT  (44)
	specconstant : cur_position . HEXADECIMAL  (45)
	specconstant : cur_position . BINARY  (46)
	symbol : cur_position . SYMBOL  (47)
	symbol : cur_position . ASCIIWOR  (48)

	LPAREN  shift 126
	ASCIIWOR  shift 60
	BINARY  shift 61
	DECIMAL  shift 62
	HEXADECIMAL  shift 63
	NUMERAL  shift 64
	STRINGLIT  shift 65
	SYMBOL  shift 66
	.  error


state 107
	qualidentifier : cur_position LPAREN AS identifier . sort RPAREN  (34)
	cur_position : .  (3)

	.  reduce 3

	identifier  goto 91
	sort  goto 127
	symbol  goto 33
	cur_position  goto 128


state 108
	identifier : cur_position . LPAREN UNDERSCORE symbol idunderscoresymnum_identifier_numeral33 RPAREN  (31)
	symbol : cur_position . SYMBOL  (47)
	symbol : cur_position . ASCIIWOR  (48)

	LPAREN  shift 129
	ASCIIWOR  shift 60
	SYMBOL  shift 66
	.  error


state 109
	term : cur_position LPAREN EXCLIMATIONPT term . termexclimationpt_term_attribute64 RPAREN  (55)
	cur_position : .  (3)

	.  reduce 3

	attribute  goto 130
	termexclimationpt_term_attribute64  goto 131
	cur_position  goto 54


state 110
	term : cur_position LPAREN EXISTS LPAREN . termexiststerm_term_sortedvar62 RPAREN term RPAREN  (54)
	cur_position : .  (3)

	.  reduce 3

	sortedvar  goto 132
	termexiststerm_term_sortedvar62  goto 133
	cur_position  goto 134


state 111
	term : cur_position LPAREN FORALL LPAREN . termforallterm_term_sortedvar60 RPAREN term RPAREN  (53)
	cur_position : .  (3)

	.  reduce 3

	sortedvar  goto 135
	termforallterm_term_sortedvar60  goto 136
	cur_position  goto 134


state 112
	term : cur_position LPAREN LET LPAREN . termletterm_term_varbinding58 RPAREN term RPAREN  (52)
	cur_position : .  (3)

	.  reduce 3

	termletterm_term_varbinding58  goto 137
	varbinding  goto 138
	cur_position  goto 139


state 113
	identifier : cur_position LPAREN UNDERSCORE symbol . idunderscoresymnum_identifier_numeral33 RPAREN  (31)
	cur_position : .  (3)

	.  reduce 3

	idunderscoresymnum_identifier_numeral33  goto 140
	cur_position  goto 141


state 114
	termqualidterm_term_term56 : term .  (65)
	termqualidterm_term_term56 : term . termqualidterm_term_term56  (66)
	cur_position : .  (3)

	LPAREN  reduce 3
	RPAREN  reduce 65
	ASCIIWOR  reduce 3
	BINARY  reduce 3
	DECIMAL  reduce 3
	HEXADECIMAL  reduce 3
	NUMERAL  reduce 3
	STRINGLIT  reduce 3
	SYMBOL  reduce 3

	identifier  goto 30
	qualidentifier  goto 31
	specconstant  goto 32
	symbol  goto 33
	term  goto 114
	termqualidterm_term_term56  goto 142
	cur_position  goto 35


state 115
	term : cur_position LPAREN qualidentifier termqualidterm_term_term56 . RPAREN  (51)

	RPAREN  shift 143
	.  error


state 116
	identifier : cur_position LPAREN . UNDERSCORE symbol idunderscoresymnum_identifier_numeral33 RPAREN  (31)
	qualidentifier : cur_position LPAREN . AS identifier sort RPAREN  (34)

	AS  shift 82
	UNDERSCORE  shift 87
	.  error


state 117
	command : cur_position LPAREN DECLAREFUN symbol LPAREN commanddeclarefun_command_sort13 RPAREN . sort RPAREN  (15)
	cur_position : .  (3)

	.  reduce 3

	identifier  goto 91
	sort  goto 144
	symbol  goto 33
	cur_position  goto 128


state 118
	commanddeclarefun_command_sort13 : sort commanddeclarefun_command_sort13 .  (80)

	.  reduce 80


state 119
	identifier : cur_position LPAREN . UNDERSCORE symbol idunderscoresymnum_identifier_numeral33 RPAREN  (31)
	sort : cur_position LPAREN . identifier sortidsortmulti_sort_sort44 RPAREN  (40)
	cur_position : .  (3)

	UNDERSCORE  shift 87
	LPAREN  reduce 3
	ASCIIWOR  reduce 3
	SYMBOL  reduce 3

	identifier  goto 145
	symbol  goto 33
	cur_position  goto 108


state 120
	command : cur_position LPAREN DEFINEFUN symbol LPAREN commanddefinefun_command_sortedvar15 RPAREN . sort term RPAREN  (16)
	cur_position : .  (3)

	.  reduce 3

	identifier  goto 91
	sort  goto 146
	symbol  goto 33
	cur_position  goto 128


state 121
	commanddefinefun_command_sortedvar15 : sortedvar commanddefinefun_command_sortedvar15 .  (78)

	.  reduce 78


state 122
	sortedvar : cur_position LPAREN . symbol sort RPAREN  (41)
	cur_position : .  (3)

	.  reduce 3

	symbol  goto 147
	cur_position  goto 38

